cmake_minimum_required(VERSION 3.0)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(LamportSign)
add_executable(${PROJECT_NAME} "main.cpp")
find_package(Boost 1.55 REQUIRED COMPONENTS thread filesystem)
if(BOOST_FOUND)
  message("boost found")
endif()
target_link_libraries(${PROJECT_NAME} sodium boost_system boost_filesystem)
